--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "global": "^4.3.2",
     "rubberduck": "^1.1.1",
     "steal": "^1.5.4",
+    "url-parse": "^1.2.0",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.3.1"
