--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "url-parse": "^1.2.0",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "weixin-js-sdk": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.0.0",
